--- a/README.rdoc
+++ b/README.rdoc
@@ -99,6 +99,7 @@ gitolite ユーザーでバックアップホストに push して、 gitolite-b
 
 == 前提
 
+* バックアップ用 gitolite インストール済み
 * バックアップ
   * リポジトリディレクトリの読み込み権限がある
   * リポジトリをバックアップするホストにパスワードなしで push 出来る
